log
Mon 10 Apr 2023 07:25:08 PM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
ff4846b
Mon 10 Apr 2023 09:08:48 PM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|5
717448a
Mon 10 Apr 2023 09:11:39 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
6a89f59
Mon 10 Apr 2023 09:21:20 PM UTC: 
 hashmap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  0|0
f13b371
Mon 10 Apr 2023 09:23:49 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
f0887b9
Mon 10 Apr 2023 09:28:00 PM UTC: 
 hashmap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
747d5fb
Mon 10 Apr 2023 09:29:20 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3a98a91
Mon 10 Apr 2023 09:34:29 PM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
9b4e990
Mon 10 Apr 2023 09:35:19 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
df69724
Mon 10 Apr 2023 09:36:47 PM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
abb4d36
Mon 10 Apr 2023 09:38:29 PM UTC: 
 hashmap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
8729dec
Mon 10 Apr 2023 09:40:43 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
c222f48
Mon 10 Apr 2023 09:46:21 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:15: error: called object ‘hash’ is not a function or function pointer
   45 |   long hash = hash((char *) key,map->capacity);
      |               ^~~~
hashmap.c:45:8: note: declared here
   45 |   long hash = hash((char *) key,map->capacity);
      |        ^~~~
Compilation failed
dcf258b
Mon 10 Apr 2023 09:47:34 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:15: error: called object ‘hash’ is not a function or function pointer
   45 |   long hash = hash( key,map->capacity);
      |               ^~~~
hashmap.c:45:8: note: declared here
   45 |   long hash = hash( key,map->capacity);
      |        ^~~~
Compilation failed
fbc294c
Mon 10 Apr 2023 09:50:45 PM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:54:16: error: assignment to ‘long int’ from ‘long int (*)(char *, long int)’ makes integer from pointer without a cast [-Werror=int-conversion]
   54 |   map->current = hash;
      |                ^
cc1: all warnings being treated as errors
Compilation failed
475ec61
Mon 10 Apr 2023 09:52:17 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
a83e4f5
Mon 10 Apr 2023 09:53:16 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  2|5
total_score: 20/70
1c5d05d
Mon 10 Apr 2023 10:08:01 PM UTC: 
 hashmap.c | 17 +++++++++++------
 1 file changed, 11 insertions(+), 6 deletions(-)
 tests:  0|0
cb4f769
Mon 10 Apr 2023 10:08:22 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
84fd7d7
Mon 10 Apr 2023 10:10:38 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
5545976
Mon 10 Apr 2023 10:11:18 PM UTC: 
 hashmap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  5|4
total_score: 30/70
59188cf
Mon 10 Apr 2023 10:13:03 PM UTC: 
 hashmap.c | 21 ++++++++++-----------
 1 file changed, 10 insertions(+), 11 deletions(-)
 tests:  5|4
total_score: 30/70
ef2ed43
Mon 10 Apr 2023 10:20:29 PM UTC: 
 hashmap.c | 23 ++++++++++++-----------
 1 file changed, 12 insertions(+), 11 deletions(-)
 tests:  0|0
dd88462
Mon 10 Apr 2023 10:21:48 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
330899a
Mon 10 Apr 2023 10:22:17 PM UTC: 
 hashmap.c | 23 +++++++++++------------
 1 file changed, 11 insertions(+), 12 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:43:20: error: implicit declaration of function ‘containsKey’ [-Werror=implicit-function-declaration]
   43 |  if(key == NULL || containsKey(map, key)) // Verificar que la clave no sea nula y no esté repetida
      |                    ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0e2b36b
Mon 10 Apr 2023 10:23:39 PM UTC: 
 hashmap.c | 23 ++++++++++++-----------
 1 file changed, 12 insertions(+), 11 deletions(-)
 tests:  0|0
a4fe440
Mon 10 Apr 2023 10:25:56 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
2dd3383
Mon 10 Apr 2023 10:30:23 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|4
total_score: 30/70
a03861f
Mon 10 Apr 2023 10:38:55 PM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
db71d31
Tue 11 Apr 2023 10:58:45 PM UTC: 
 hashmap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:87:4: error: this ‘while’ clause does not guard... [-Werror=misleading-indentation]
   87 |    while(map->buckets[index]!=NULL)
      |    ^~~~~
hashmap.c:101:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘while’
  101 |     return NULL;
      |     ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
0afbc59
Wed 12 Apr 2023 06:26:20 PM UTC: 
 hashmap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  8|3
total_score: 40/70
4ea73a5
Wed 12 Apr 2023 06:32:56 PM UTC: 
 hashmap.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
d2e3e40
Wed 12 Apr 2023 06:34:11 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  11|2
total_score: 50/70
ecf09ba
Wed 12 Apr 2023 06:49:42 PM UTC: 
 hashmap.c | 20 ++++++++++++--------
 1 file changed, 12 insertions(+), 8 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:105:10: error: unused variable ‘index_inicial’ [-Werror=unused-variable]
  105 |   size_t index_inicial = index;
      |          ^~~~~~~~~~~~~
hashmap.c: In function ‘insertMap’:
hashmap.c:52:20: error: ‘index’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   52 |     size_t index = hash((char *) index, map->capacity);
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0475ec4
Wed 12 Apr 2023 06:49:56 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:52:20: error: ‘index’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   52 |     size_t index = hash((char *) index, map->capacity);
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4035cb3
Wed 12 Apr 2023 06:50:19 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
cc17e3b
Wed 12 Apr 2023 06:53:20 PM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  11|2
total_score: 50/70
ca10963
